--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node tests/index.js"
+    "test": "node tests/index.js",
+    "lint": "eslint ./ --fix"
   },
   "repository": {
     "type": "git",
